# gcp-services-poc

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
api/: main.py
